[metadata]
name = vyconf
summary = Application config framework
description-file = README.md
license = LGPL
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Environment :: Networking
    Development Status :: 3 - Alpha,
    Framework :: Setuptools Plugin,
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL),
    Operating System :: POSIX :: Linux
author = VyOS Team
author_email = vyos@vyos.org
home-page = https://bugzilla.vyos.org

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    vyconf

data_files =
    share/schemas =
        data/schemas/*.rnc

[entry_points]
console_scripts =

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _
mapping_file = babel.cfg
output_file = vyconf/locale/vyconf.pot
